Add spring-security feature for an existing user to login or register as a new user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog_application
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogApp
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
