Add pagination, searching, sorting and filtering in REST APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogApp
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:17692/railway
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=fdgaa2ee2-b4e4D314b3G52cADCe53C3
 
 spring.jpa.hibernate.ddl-auto= update
 
