Improve code indentation and variable naming

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:17692/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogApp
 spring.datasource.username=postgres
-spring.datasource.password=fdgaa2ee2-b4e4D314b3G52cADCe53C3
+spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto= update
-
 
 # Show SQL queries on the console
 spring.jpa.show-sql=true
